log

Thu 17 Aug 2023 08:26:10 PM UTC: 
 tests:  0|7
total_score: 0/70
b43e9bf
Thu 17 Aug 2023 08:33:06 PM UTC: 
 exercises.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘findMax’:
exercises.c:16:17: error: ‘array’ undeclared (first use in this function); did you mean ‘arr’?
   16 |     if (mayor < array[i]){
      |                 ^~~~~
      |                 arr
exercises.c:16:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
00b6447
Thu 17 Aug 2023 08:33:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 10/70
f2afe13
Thu 17 Aug 2023 08:48:40 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:33:20: error: ‘*arrayC[0]’ may be used uninitialized [-Werror=maybe-uninitialized]
   33 |     arr[a] = arrayC[a];
      |              ~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
40bc4e3
Thu 17 Aug 2023 08:50:00 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:7: error: unused variable ‘tam2’ [-Werror=unused-variable]
   29 |   int tam2= sizeof(arrayC) / sizeof(arrayC[0]);
      |       ^~~~
exercises.c:34:20: error: ‘*arrayC[0]’ may be used uninitialized [-Werror=maybe-uninitialized]
   34 |     arr[a] = arrayC[a];
      |              ~~~~~~^~~
cc1: all warnings being treated as errors
Compilation failed
d17c10d
Thu 17 Aug 2023 08:50:19 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e8104e4
Thu 17 Aug 2023 08:54:28 PM UTC: 
 exercises.c | 14 +++++++-------
 1 file changed, 7 insertions(+), 7 deletions(-)
In file included from test.c:1:
exercises.c:36:1: error: expected identifier or ‘(’ before ‘}’ token
   36 | }
      | ^
Compilation failed
c3f9bc8
Thu 17 Aug 2023 08:54:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Thu 17 Aug 2023 08:54:59 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Thu 17 Aug 2023 08:55:30 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
67466a6
Thu 17 Aug 2023 09:07:15 PM UTC: 
 exercises.c | 25 ++++++++++++++++++++++++-
 1 file changed, 24 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:49:8: error: ‘array’ undeclared (first use in this function); did you mean ‘arr’?
   49 |     if(array[i] % 2 == 0){
      |        ^~~~~
      |        arr
exercises.c:49:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:53:57: error: expected ‘)’ before ‘;’ token
   53 |   int *arrayPares = (int*)malloc(contPares * sizeof(int);
      |                                 ~                       ^
      |                                                         )
exercises.c:69:22: error: expected ‘,’ or ‘;’ before ‘}’ token
   69 |   return arrayPares; }
      |                      ^
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
In file included from test.c:1:
exercises.c:53:8: error: unused variable ‘arrayPares’ [-Werror=unused-variable]
   53 |   int *arrayPares = (int*)malloc(contPares * sizeof(int);
      |        ^~~~~~~~~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c6a2b01
Thu 17 Aug 2023 09:07:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:49:8: error: ‘array’ undeclared (first use in this function); did you mean ‘arr’?
   49 |     if(array[i] % 2 == 0){
      |        ^~~~~
      |        arr
exercises.c:49:8: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:53:57: error: expected ‘)’ before ‘;’ token
   53 |   int *arrayPares = (int*)malloc(contPares * sizeof(int);
      |                                 ~                       ^
      |                                                         )
exercises.c:69:22: error: expected ‘,’ or ‘;’ before ‘}’ token
   69 |   return arrayPares; }
      |                      ^
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
In file included from test.c:1:
exercises.c:53:8: error: unused variable ‘arrayPares’ [-Werror=unused-variable]
   53 |   int *arrayPares = (int*)malloc(contPares * sizeof(int);
      |        ^~~~~~~~~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
6fa0770
Thu 17 Aug 2023 09:07:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘filterEvenNumbers’:
exercises.c:53:57: error: expected ‘)’ before ‘;’ token
   53 |   int *arrayPares = (int*)malloc(contPares * sizeof(int);
      |                                 ~                       ^
      |                                                         )
exercises.c:69:22: error: expected ‘,’ or ‘;’ before ‘}’ token
   69 |   return arrayPares; }
      |                      ^
test.c:382:5: error: ‘main’ is normally a non-static function [-Werror=main]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:410:1: error: expected declaration or statement at end of input
  410 | }
      | ^
test.c:7:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    7 | char msg[300];
      |      ^~~
In file included from test.c:1:
exercises.c:53:8: error: unused variable ‘arrayPares’ [-Werror=unused-variable]
   53 |   int *arrayPares = (int*)malloc(contPares * sizeof(int);
      |        ^~~~~~~~~~
test.c:411: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:382:5: error: ‘main’ defined but not used [-Werror=unused-function]
  382 | int main(int argc, char *argv[]) {
      |     ^~~~
test.c:47:6: error: ‘readIntArray’ defined but not used [-Werror=unused-function]
   47 | void readIntArray(int arr[], int *size) {
      |      ^~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
aef354f
Thu 17 Aug 2023 09:08:31 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|4
total_score: 30/70
c6f4047
Fri 18 Aug 2023 10:40:37 PM UTC: 
 exercises.c | 21 +++++++++++++++++++--
 1 file changed, 19 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
b69eb29
Fri 18 Aug 2023 10:42:24 PM UTC: 
 exercises.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  0|2
total_score: 50/70
1595fe8
Fri 18 Aug 2023 10:44:06 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
Fri 18 Aug 2023 10:44:45 PM UTC: 
 exercises.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|1
total_score: 60/70
73c1b44
Fri 18 Aug 2023 10:46:39 PM UTC: 
 exercises.c | 27 ++++++++++++++++++++++++++-
 1 file changed, 26 insertions(+), 1 deletion(-)
 tests:  0|0
total_score: 70/70
9d6c847
Sat 19 Aug 2023 12:56:00 AM UTC: 
 exercises.c | 13 ++++++-------
 1 file changed, 6 insertions(+), 7 deletions(-)
 tests:  0|0
total_score: 70/70
1956050
